force-app/main/default/objects/Document_Template__c/Document_Template__c.object-meta.xml
<CustomObject>
    <description>This object will store the templates to be used to generate documents.</description>
    <label>Document Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>