force-app/main/default/objects/Document_Template__c/fields/Document_Require_E_Signature__c.field-meta.xml
<CustomField>
    <fullName>Document_Require_E_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Require E-Signature</label>
    <type>Checkbox</type>
</CustomField>