force-app/main/default/objects/Document_Template__c/fields/Field_Mapping_Records_Created__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping_Records_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Mapping Records Created</label>
    <type>Checkbox</type>
</CustomField>