force-app/main/default/objects/Document_Template__c/fields/Receiver_Email__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Email__c</fullName>
    <label>Receiver Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>