force-app/main/default/objects/Document_Template__c/fields/Salesforce_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_File_Id__c</fullName>
    <label>Salesforce File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>