force-app/main/default/objects/Document_Template__c/fields/Template_Output__c.field-meta.xml
<CustomField>
    <fullName>Template_Output__c</fullName>
    <label>Template Output</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send file as email attachment</fullName>
            </value>
            <value>
                <fullName>Create Salesforce file record</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>