force-app/main/default/objects/Document_Template__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <description>This field will store the type of file used as template</description>
    <label>Template Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>