force-app/main/default/objects/Document_Template__c/fields/Template_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Template_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template Uploaded</label>
    <type>Checkbox</type>
</CustomField>